--- a/mcp_config.json
+++ b/mcp_config.json
@@ -1,7 +1,7 @@
 {
   "mcpServers": {
     "robinhood": {
-      "url": "http://127.0.0.1:8000/sse"
+      "url": "http://127.0.0.1:8000/messages"
     }
   }
 }
