--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@
 click>=8.0
 python-dotenv>=1.0
 robin_stocks>=0.1.0
-fastmcp>=2.14.5,<3
+fastmcp>=2.14.0,<3
 mcp>=1.26.0,<2
+pandas>=2.0.0
+numpy>=1.24.0
 yfinance>=0.2.0
 pandas_market_calendars>=5.0
 praw>=7.7.0
